2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/Application.cs: moved global tapioca connection creation and
	  processing into account

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/ChatWindow.cs: new constructor with conversation

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter.mdp: added ConversationManager

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter.mdp, Banter/Makefile.am: added ConversationManager
	* Banter/Account.cs: moved tapioca connection processing into account
	* Banter/Application.cs: moved tapioca connection creation and
	  processing into account
	* Banter/ConversationManager.cs: initial checkin
	* Banter/Conversation.cs: new constructor

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter.mdp, Banter/Makefile.am: added ConversationManager
	* Banter/Account.cs: moved tapioca connection processing into account
	* Banter/Application.cs: moved tapioca connection creation and
	  processing into account
	* Banter/ConversationManager.cs: initial checkin
	* Banter/Conversation.cs: new constructor

2007-05-09  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonStore.cs: Added ability to set and get Me Person
	* Banter/GroupWindow.cs: Added "Me" avatar if store in EDS

2007-05-09  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added a gtk-sharp reference
	* Banter/PreferencesDialog.cs: Updated calls to AddMessage to pass null
	  for the avatar path
	* Banter/Application.cs: Added code to create a Person for Me
	* Banter/Person.cs: Added a cachePath and stored off the avatar from
	  EDS
	* Banter/ChatWindow.cs: Changed the AddMessage method to send an avatar
	  path if available
	* Banter/PersonCard.cs: Updated to use the avatar created in the Person
	  object
	* Banter/MessagesView.cs: changed AddMessage to take an avatarPath but
	  ignore it if it's null

2007-05-04  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Bump the version to 0.1.2.
